# Smart-Book-Management-System-Agentic-RAG

./: README.md
backend/: README.md  pyproject.toml
backend/app/: create_table.py  crud.py  llama3.py  main.py  recommendations.py  s3_service.py
backend/app/api/v1/routes/: auth.py  authors.py  documents.py  genres.py  ingestion.py  users.py
backend/app/api/v1/schemas/: __init__.py  author.py  book.py  generate_summary.py  genre.py  review.py
backend/app/core/: auth.py  config.py  logging.py  middleware.py  security.py
backend/app/db/: health.py  lifecycle.py  models.py  session.py
backend/app/db/models/: __init__.py  auth_token.py  author.py  book.py  document.py  genre.py  ingestion_job.py  review.py  role.py  user.py  user_roles.py
backend/app/rag/: __init__.py  embeddings.py  indexer.py  rag_pipeline.py  retriever.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.js  axios.js  books.js  users.js
frontend/src/auth/: Login.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: AddBook.jsx  AdminUsers.jsx  Books.jsx  Ingestion.jsx  Summary.jsx
