[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic~=1.13",
    "asyncpg~=0.29",
    "fastapi~=0.110",
    "httpx~=0.27",
    "passlib[bcrypt]~=1.7",
    "pydantic~=2.6",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]~=3.3",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]~=2.0",
    "typing-extensions~=4.10",
    "uvicorn~=0.27",
]
